4/9/23 - Further developed the contact page, added imagery and refined font choices and font weights. Next steps will be to fix the background colours and spacing and then the page will be finished until refinements.

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 
@@ -903,7 +903,7 @@ body {
 
 .contact-me-content-container {
   width: 40%;
-  padding: 50px;
+  padding: 40px;
 }
 
 .enquiry-box-container {
@@ -921,8 +921,16 @@ body {
 
 .contact-me-basic > h2 {
   font-size: 20px;
-  padding: 10px 0;
-  font-weight: 200;
+  padding-top: 25px;
+  font-weight: 500;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.contact-me-basic > h3 {
+  font-size: 20px;
+  font-weight: 400;
+  font-family: 'Montserrat', sans-serif;
+  font-style: italic;
 }
 
 input[type=text], select, textarea {
@@ -933,7 +941,8 @@ input[type=text], select, textarea {
   box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
-  resize: vertical
+  resize: vertical;
+  font-family: 'Montserrat', sans-serif;
 }
 
 input[type=submit] {
